corrigiendo bugs de menues

--- a/views/secciones/shows.erb
+++ b/views/secciones/shows.erb
@@ -6,7 +6,7 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <title>Buena Cosecha, Ska Reggae | Shows</title>
     </head>
-    
+
     <body>
         <br>
         <br>
@@ -22,5 +22,10 @@
                 <i class="material-icons">arrow_forward</i>Próximos</a>
         </div>
         <br>
+
+        <script src="/js/menu.js"></script>
+        <script src="/js/clicks.js"></script>
+        <script src="/js/jquery.js"></script>
+
     </body>
 </html>
