corrigiendo bugs de menues

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -85,7 +85,7 @@
         <ul class="w3-navbar w3-left-align w3-black">
             <li>
                 <a class="w3-padding-large" href="/">Home
-                  <i id="textomenumobilemusica"></i>
+                    <i id="textomenumobilemusica"></i>
                 </a>
             </li>
             <li>
@@ -104,5 +104,9 @@
                 <%= yield %>
             </div>
         </div>
+        <script src="/js/menu.js"></script>
+        <script src="/js/clicks.js"></script>
+        <script src="/js/jquery.js"></script>
+
     </body>
 </html>
