--- a/views/layout.erb
+++ b/views/layout.erb
@@ -108,4 +108,25 @@
         <script src="/js/clicks.js"></script>
         <script src="/js/jquery.js"></script>
     </body>
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+        <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+            <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
+        </a>
+        <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+            <i id="social-in" class="fa fa-instagram fa-3x social"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
+            <i id="social-yt" class="fa fa-youtube-play fa-3x social"></i>
+        </a>
+        <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+            <i id="social-tw" class="fa fa-twitter-square fa-3x social"></i>
+        </a>
+        <a href="#" class="w3-hover-text-indigo">
+            <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+            <i id="social-fb" class="fa fa-facebook-square fa-3x social"></i>
+        </a>
+    </footer>
+
 </html>
