--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <title>Buena Cosecha, Ska Reggae | Música</title>
     </head>
 
