cambiando botonera de pagina multimedia

--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <title>Buena Cosecha, Ska Reggae | Música</title>
     </head>
 
@@ -15,19 +14,19 @@
         <br>
         <div class="w3-container textocategorias">
             <a href="audios" class="quitar">
-                <i class="material-icons">library_music</i>Audios</a>
+                <i class="fa fa-audio-description" aria-hidden="true"></i>Audios</a>
         </div>
         <br>
 
         <div class="w3-container textocategorias">
             <a href="videos" class="quitar">
-                <i class="material-icons">movie</i>Videos</a>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>Videos</a>
         </div>
         <br>
 
         <div class="w3-container textocategorias">
             <a href="letras" class="quitar">
-                <i class="material-icons">note</i>Letras</a>
+                <i class="fa fa-file-text" aria-hidden="true"></i>Letras</a>
         </div>
         <br>
     </body>
