--- a/views/layout.erb
+++ b/views/layout.erb
@@ -85,17 +85,18 @@
         <ul class="w3-navbar w3-left-align w3-black">
             <li>
                 <a class="w3-padding-large" href="/">Home
-                    <i id="textomenumobilemusica"></i>
                 </a>
             </li>
             <li>
                 <a class="w3-padding-large" href="multimedia">Música</a>
-                <i id="textomenumobileshows"></i>
             </li>
             <li>
                 <a class="w3-padding-large" href="shows">Fechas</a>
-                <i id="textomenumobilenosotros"></i>
             </li>
+            <li>
+                <a class="w3-padding-large" href="nosotros">Nosotros</a>
+            </li>
+
         </ul>
     </div>
     <body>
