--- a/views/layout.erb
+++ b/views/layout.erb
@@ -125,5 +125,7 @@
         <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
             <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
         </a>
+        <p class="w3-medium">Desarrollado por Buena Cosecha - 2016
+        </p>
     </footer>
 </html>
