--- a/views/secciones/shows.erb
+++ b/views/secciones/shows.erb
@@ -14,12 +14,12 @@
         <br>
         <div class="w3-container textocategorias">
             <a href="pasados" class="quitar">
-                <i class="material-icons">arrow_back</i>Pasados</a>
+                <i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i>Pasados</a>
         </div>
         <br>
         <div class="w3-container textocategorias">
             <a href="proximos" class="quitar">
-                <i class="material-icons">arrow_forward</i>Próximos</a>
+                <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>Próximos</a>
         </div>
         <br>
 
