cambiando flechas de pagina shows y agregando footer con desarrollo

--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -14,19 +14,19 @@
         <br>
         <div class="w3-container textocategorias">
             <a href="audios" class="quitar">
-                <i class="fa fa-audio-description" aria-hidden="true"></i>  Audios</a>
+                <i class="fa fa-audio-description fa-2x social" aria-hidden="true"></i>  Audios</a>
         </div>
         <br>
 
         <div class="w3-container textocategorias">
             <a href="videos" class="quitar">
-                <i class="fa fa-youtube-play" aria-hidden="true"></i>  Videos</a>
+                <i class="fa fa-youtube-play fa-2x social" aria-hidden="true"></i>  Videos</a>
         </div>
         <br>
 
         <div class="w3-container textocategorias">
             <a href="letras" class="quitar">
-                <i class="fa fa-file-text" aria-hidden="true"></i>  Letras</a>
+                <i class="fa fa-file-text fa-2x social" aria-hidden="true"></i>  Letras</a>
         </div>
         <br>
     </body>
