--- a/views/index.erb
+++ b/views/index.erb
@@ -21,31 +21,31 @@
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda1.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-bottomleft w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda2.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-topleft w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda3.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda8.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-bottomright w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
@@ -57,19 +57,19 @@
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda30.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-topmiddle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda60.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/bandd.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
                 </div>
             </div>
