--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
     </head>
     <!-- Navbar -->
     <div class="w3-top">
-        <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
+        <ul class="w3-navbar w3-card-2 w3-left-align">
             <li class="w3-hide-large w3-opennav w3-left">
                 <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
                     <i class="fa fa-bars"></i>
