--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,8 @@
         <link href="/imagenes/favicon.ico" rel="shortcut icon">
         <script src="/js/analytics.js"></script>
     </head>
-    <!-- Navbar -->
+
+    <!-- Navbar de monitores grandes-->
     <div class="w3-top">
         <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
             <li class="w3-hide-large w3-opennav w3-left">
@@ -80,7 +81,8 @@
             </li>
         </ul>
     </div>
-    <!-- Navbar on small screens -->
+
+    <!-- Menu de celulares y tablets -->
     <div id="navDemo" class="w3-hide w3-hide-large w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-left-align w3-black">
             <li>
@@ -91,14 +93,18 @@
                 <a class="w3-padding-large" href="multimedia">Música</a>
             </li>
             <li>
-                <a class="w3-padding-large" href="shows">Fechas</a>
+                <a class="w3-padding-large" href="shows">Shows</a>
             </li>
             <li>
                 <a class="w3-padding-large" href="nosotros">Nosotros</a>
             </li>
-
         </ul>
     </div>
+    <div class="w3-container">
+
+    </div>
+
+    <!-- Contenido del body -->
     <body>
         <div id='header'>
             <div id='main'>
@@ -109,6 +115,8 @@
         <script src="/js/clicks.js"></script>
         <script src="/js/jquery.js"></script>
     </body>
+
+    <!-- Contenido del footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
         <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
             <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
