--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -13,21 +13,23 @@
         <br>
         <br>
 
-        <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
-                <span class="textocategorias2">Viernes 21 de Octubre
-                </span>
-                en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $80 en puerta
-                <i class="material-icons">priority_high</i>
-            </a>
-        </div>
-        <br>
-        <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/WhiteVinylBar/" target="_blank" class="quitar">
-                <span class="textocategorias2">Sabado 26 de Noviembre</span>
-                en White Vinyl (H. Yrigoyen 13233 Adrogue), 22 hs, $70 anticipadas $100 en puerta
-                <i class="material-icons">priority_high</i>
-            </a>
+        <div class="w3-container" id="proximosshows">
+            <div class="w3-container textocategorias">
+                <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
+                    <span class="textocategorias2">Viernes 21 de Octubre
+                    </span>
+                    en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $80 en puerta
+                    <i class="material-icons">priority_high</i>
+                </a>
+            </div>
+            <br>
+            <div class="w3-container textocategorias">
+                <a href="https://www.facebook.com/WhiteVinylBar/" target="_blank" class="quitar">
+                    <span class="textocategorias2">Sabado 26 de Noviembre</span>
+                    en White Vinyl (H. Yrigoyen 13233 Adrogue), 22 hs, $70 anticipadas $100 en puerta
+                    <i class="material-icons">priority_high</i>
+                </a>
+            </div>
         </div>
         <br>
 
