--- a/views/layout.erb
+++ b/views/layout.erb
@@ -100,7 +100,7 @@
             </li>
         </ul>
     </div>
-    <div class="w3-container">
+    <div class="w3-container" id="proximosshowsmobile">
 
     </div>
 
@@ -114,6 +114,7 @@
         <script src="/js/menu.js"></script>
         <script src="/js/clicks.js"></script>
         <script src="/js/jquery.js"></script>
+        <script src="/js/contenido.js"></script>
     </body>
 
     <!-- Contenido del footer -->
