poniendo js de copia de divs

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -100,7 +100,7 @@
             </li>
         </ul>
     </div>
-    <div class="w3-container" id="proximosshowsmobile">
+    <div class="w3-container proximosshowsmobile" id="proximosshowsmobile">
 
     </div>
 
