--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -13,7 +13,7 @@
         <br>
         <br>
 
-        <div class="w3-container" id="proximosshows">
+        <div class="w3-container proximosshows" id="proximosshows">
             <div class="w3-container textocategorias">
                 <a href="https://www.facebook.com/events/191240934614955/" target="_blank" class="quitar">
                     <span class="textocategorias2">Viernes 21 de Octubre
