cambiando fuente del menu

--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2054,19 +2054,19 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .menuhomerojo {
     font-size: 27px;
-    font-family: 'Bangers', cursive;
+    font-family: 'Frijole', cursive;
     color: #A32535;
 }
 
 .menuhomeamarillo {
     font-size: 27px;
-    font-family: 'Bangers', cursive;
+    font-family: 'Frijole', cursive;
     color: #E6D672;
 }
 
 .menuhomeverde {
     font-size: 27px;
-    font-family: 'Bangers', cursive;
+    font-family: 'Frijole', cursive;
     color: #43962D;
 }
 
