--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,7 @@
             </li>
             <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
-                    <h4 id="menumusica" class="menuhomerojo">Música</h4>
+                    <h4 id="menumusica" class="menuhomerojo">MÚSICA</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="audios">Audios</a>
@@ -32,7 +32,7 @@
             </li>
             <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
-                    <h4 id="menushow" class="menuhomeamarillo">Shows</h4>
+                    <h4 id="menushow" class="menuhomeamarillo">SHOWS</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align ">
                     <a href="proximos">Próximos</a>
@@ -41,7 +41,7 @@
             </li>
             <li class="w3-hide-small w3-hide-medium">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
-                    <h4 id="menunosotros" class="menuhomeverde">Nosotros</h4>
+                    <h4 id="menunosotros" class="menuhomeverde">NOSOTROS</h4>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
