--- a/views/secciones/votaciones.erb
+++ b/views/secciones/votaciones.erb
@@ -17,6 +17,7 @@
         <br>
         <br>
 
+        <a class="w3-btn w3-red" href='https://forms.zohopublic.com/info450/form/TocarenlaFlor/formperma/mkFK4fh36mjkdkCD83j825fa2' title="Tocar en la Flor" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votacion tres | Tocar o no en la flor</a>
         <a class="w3-btn w3-indigo" href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos | Asado y ensayo</a>
         <a class="w3-btn w3-teal" href='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95' title="¿Cuantos temas grabar?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación uno | Grabación y temas</a>
 
