--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,7 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu rotate">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
                     <h4 id="menumusica" class="menuhomerojo">MÚSICA</h4>
                 </a>
@@ -30,7 +30,7 @@
                     <a href="letras">Letras</a>
                 </div>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu rotate">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
                     <h4 id="menushow" class="menuhomeamarillo">SHOWS</h4>
                 </a>
@@ -39,7 +39,7 @@
                     <a href="pasados">Pasados</a>
                 </div>
             </li>
-            <li class="w3-hide-small w3-hide-medium">
+            <li class="w3-hide-small w3-hide-medium rotate">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
                     <h4 id="menunosotros" class="menuhomeverde">NOSOTROS</h4>
                 </a>
