clase de rotación para menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,14 +13,14 @@
     </head>
 
     <!-- Navbar de monitores grandes-->
-    <div class="w3-top">
+    <div class="w3-top rotate">
         <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
             <li class="w3-hide-large w3-opennav w3-left">
                 <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
                     <i class="fa fa-bars"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu rotate">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
                     <h4 id="menumusica" class="menuhomerojo">MÚSICA</h4>
                 </a>
@@ -30,7 +30,7 @@
                     <a href="letras">Letras</a>
                 </div>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu rotate">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
                     <h4 id="menushow" class="menuhomeamarillo">SHOWS</h4>
                 </a>
@@ -39,7 +39,7 @@
                     <a href="pasados">Pasados</a>
                 </div>
             </li>
-            <li class="w3-hide-small w3-hide-medium rotate">
+            <li class="w3-hide-small w3-hide-medium ">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
                     <h4 id="menunosotros" class="menuhomeverde">NOSOTROS</h4>
                 </a>
