--- a/views/index.erb
+++ b/views/index.erb
@@ -12,6 +12,8 @@
     </head>
 
     <body>
+
+        <!-- Slide
         <div class="w3-content" style="max-width:1800px;margin-top:54px">
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/banda6.jpg" class="w3-animate-top" style="width:100%">
@@ -74,6 +76,30 @@
                 </div>
             </div>
         </div>
+        Navbar de monitores grandes-->
+
+        <div class="w3-container">
+
+            <svg viewBox="0 0 1320 300">
+
+                <!-- Symbol -->
+                <symbol id="s-text">
+                    <text text-anchor="middle" x="50%" y="50%" dy=".35em">
+                        Buena Cosecha
+                    </text>
+                </symbol>
+
+                <!-- Duplicate symbols -->
+                <use xlink:href="#s-text" class="text"></use>
+                <use xlink:href="#s-text" class="text"></use>
+                <use xlink:href="#s-text" class="text"></use>
+                <use xlink:href="#s-text" class="text"></use>
+                <use xlink:href="#s-text" class="text"></use>
+
+            </svg>
+
+        </div>
+
         <script src="/js/slide.js"></script>
         <script src="/js/menu.js"></script>
         <script src="/js/clicks.js"></script>
