--- a/views/index.erb
+++ b/views/index.erb
@@ -79,24 +79,14 @@
         Navbar de monitores grandes-->
 
         <div class="w3-container">
-
-            <svg viewBox="0 0 1320 300">
-
-                <!-- Symbol -->
-                <symbol id="s-text">
-                    <text text-anchor="middle" x="50%" y="50%" dy=".35em">
-                        Buena Cosecha
-                    </text>
-                </symbol>
-
-                <!-- Duplicate symbols -->
-                <use xlink:href="#s-text" class="text"></use>
-                <use xlink:href="#s-text" class="text"></use>
-                <use xlink:href="#s-text" class="text"></use>
-                <use xlink:href="#s-text" class="text"></use>
-                <use xlink:href="#s-text" class="text"></use>
-
-            </svg>
+            <h1>
+                <span>Buena Cosecha</span>
+            </h1>
+            <div class='outer-scratch'>
+                <div class="inner-scratch">
+                    <div class="background grain"></div>
+                </div>
+            </div>
 
         </div>
 
