--- a/views/index.erb
+++ b/views/index.erb
@@ -80,22 +80,22 @@
         <div class="wrapper">
               <p class="title"></p>
               <div class="clip-text clip-text_one">Buena Cosecha</div>
-          <div class="clip-text clip-text_fifteen clip-text--no-textzone">Buena Cosecha</div>
-              <div class="clip-text clip-text_twelve clip-text--cover">Buena Cosecha</div>
-          <div class="clip-text clip-text_tree clip-text--no-textzone">Buena Cosecha</div>
-              <div class="clip-text clip-text_two">Buena Cosecha</div>
-              <div class="clip-text clip-text_fourteen clip-text--cover">Buena Cosecha</div>
-              <div class="clip-text clip-text_tree">Buena Cosecha</div>
-              <div class="clip-text clip-text_eleven clip-text--cover">Buena Cosecha</div>
-              <div class="clip-text clip-text_four">Buena Cosecha</div>
-              <div class="clip-text clip-text_five">Buena Cosecha</div>
-              <div class="clip-text clip-text_six">Buena Cosecha</div>
-              <div class="clip-text clip-text_seven">Buena Cosecha</div>
-              <div class="clip-text clip-text_eight">Buena Cosecha</div>
+          <div class="clip-text clip-text_fifteen clip-text--no-textzone">Buena</div>
+              <div class="clip-text clip-text_twelve clip-text--cover">Cosecha</div>
+          <div class="clip-text clip-text_tree clip-text--no-textzone">Buena</div>
+              <div class="clip-text clip-text_two">Cosecha</div>
+              <div class="clip-text clip-text_fourteen clip-text--cover">Buena</div>
+              <div class="clip-text clip-text_tree">Cosecha</div>
+              <div class="clip-text clip-text_eleven clip-text--cover">Buena</div>
+              <div class="clip-text clip-text_four">Cosecha</div>
+              <div class="clip-text clip-text_five">Buena</div>
+              <div class="clip-text clip-text_six">Cosecha</div>
+              <div class="clip-text clip-text_seven">Buena</div>
+              <div class="clip-text clip-text_eight">Cosecha</div>
 
-              <div class="clip-text clip-text_nine">Buena Cosecha</div>
-              <div class="clip-text clip-text_ten">Buena Cosecha</div>
-              <div class="clip-text clip-text_thirteen clip-text--cover">Buena Cosecha</div>
+              <div class="clip-text clip-text_nine">Buena</div>
+              <div class="clip-text clip-text_ten">Cosecha</div>
+              <div class="clip-text clip-text_thirteen clip-text--cover">Buena</div>
           </div>
 
         <script src="/js/slide.js"></script>
