--- a/views/index.erb
+++ b/views/index.erb
@@ -77,26 +77,15 @@
             </div>
         </div>
         Navbar de monitores grandes-->
-        <div class="wrapper">
-              <p class="title"></p>
-              <div class="clip-text clip-text_one">Buena Cosecha</div>
-          <div class="clip-text clip-text_fifteen clip-text--no-textzone">Buena</div>
-              <div class="clip-text clip-text_twelve clip-text--cover">Cosecha</div>
-          <div class="clip-text clip-text_tree clip-text--no-textzone">Buena</div>
-              <div class="clip-text clip-text_two">Cosecha</div>
-              <div class="clip-text clip-text_fourteen clip-text--cover">Buena</div>
-              <div class="clip-text clip-text_tree">Cosecha</div>
-              <div class="clip-text clip-text_eleven clip-text--cover">Buena</div>
-              <div class="clip-text clip-text_four">Cosecha</div>
-              <div class="clip-text clip-text_five">Buena</div>
-              <div class="clip-text clip-text_six">Cosecha</div>
-              <div class="clip-text clip-text_seven">Buena</div>
-              <div class="clip-text clip-text_eight">Cosecha</div>
 
-              <div class="clip-text clip-text_nine">Buena</div>
-              <div class="clip-text clip-text_ten">Cosecha</div>
-              <div class="clip-text clip-text_thirteen clip-text--cover">Buena</div>
-          </div>
+        <h1>
+            <span>CSS Cinema Effect</span>
+        </h1>
+        <div class='outer-scratch'>
+            <div class="inner-scratch">
+                <div class="background grain"></div>
+            </div>
+        </div>
 
         <script src="/js/slide.js"></script>
         <script src="/js/menu.js"></script>
