--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2126,172 +2126,271 @@ body {
 
 /* Efecto de letras HOMEPAGE */
 
-* {
-    margin: 0;
-    padding: 0;
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:100);
+
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 
-*,
-:before,
-:after {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+.background {
+  width: 100%;
+  height: 100%;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/662025/abstract.jpg');
+  background-size: cover;
 }
 
-html,
-body {
-    min-height: 100%;
+.outer-scratch, .inner-scratch {
+  height: inherit;
 }
 
-body {
-    font-family: 'Oswald', sans-serif;
-    color: #fff;
-    background-color: #000;
+.outer-scratch:after, .inner-scratch:after {
+  content: '';
+  width: 120%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-left: 100px;
+  opacity: .08;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/662025/scratch.png') repeat center center;
+  -webkit-animation: scratch 0.45s steps(1) infinite;
+  animation: scratch 0.45s steps(1) infinite;
 }
 
-.wrapper {
-    text-align: center;
+.inner-scratch:after {
+  left: 30%;
+  -webkit-animation: inner-scratch 2s infinite;
+  animation: inner-scratch 2s infinite;
 }
 
-.title {
-    font-size: 2em;
-    position: relative;
-    margin: 0 auto 1em;
-    padding: 1em 1em .25em 1em;
-    text-align: center;
-    text-transform: uppercase;
-}
-.title:after {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    width: 240px;
-    height: 4px;
-    margin-left: -120px;
-    content: '';
-    background-color: #fff;
+.grain:after {
+  content: '';
+  width: 110%;
+  height: 110%;
+  position: absolute;
+  top: -5%;
+  left: -5%;
+  opacity: .11;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/662025/grain.jpg') repeat center center;
+  -webkit-animation: grain 0.5s steps(1) infinite;
+  animation: grain 0.5s steps(1) infinite;
 }
 
-/* Clip text element */
-.clip-text {
-    font-size: 6em;
-    font-weight: bold;
-    line-height: 1;
-    position: relative;
+/*  Basic Title  */
+h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 3em;
+  text-align: center;
+  color: #fff;
+  -webkit-animation: 3s fade;
+  animation: 3s fade;
+  span {
     display: inline-block;
-    margin: .25em;
-    padding: .5em .75em;
-    text-align: center;
-    /* Color fallback */
-    color: #fff;
-    -webkit-background-clip: text;
-
-    -webkit-text-fill-color: transparent;
+    position: relative;
+    padding: .5em 1em;
+    &:before {
+      display: block;
+      content: '';
+      width: 110%;
+      margin-left: -5%;
+      margin-bottom: 5%;
+      border-top: 1px solid #fff;
+      -webkit-animation: 2.5s draw;
+      animation: 2.5s draw;
+    }
+    &:after {
+      display: block;
+      content: '';
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      border-bottom: 1px solid #fff;
+      -webkit-animation: 2.5s draw-bottom;
+      animation: 2.5s draw-bottom;
+    }
+  }
 }
 
-.clip-text:before,
-.clip-text:after {
-    position: absolute;
-    content: '';
+/* Film Animations */
+// Grain
+@keyframes grain {
+  0%, 100% {
+    transform: translate(0, 0, 0);
+  }
+
+  10% {
+    transform: translate(-1%, -1%);
+  }
+
+  20% {
+    transform: translate(1%, 1%);
+  }
+
+  30% {
+    transform: translate(-2%, -2%);
+  }
+
+  40% {
+    transform: translate(3%, 3%);
+  }
+
+  50% {
+    transform: translate(-3%, -3%);
+  }
+
+  60% {
+    transform: translate(4%, 4%);
+  }
+
+  70% {
+    transform: translate(-4%, -4%);
+  }
+
+  80% {
+    transform: translate(2%, 2%);
+  }
+
+  90% {
+    transform: translate(-3%, -3%);
+  }
 }
 
-/* Background */
-.clip-text:before {
-    z-index: -2;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: inherit;
+// Quick Scratches
+@keyframes scratch {
+  0%, 100% {
+    transform: translateX(0);
+    opacity: 0.075;
+  }
+
+  10% {
+    transform: translateX(-1%);
+  }
+
+  20% {
+    transform: translateX(1%);
+  }
+
+  30% {
+    transform: translateX(-2%);
+        opacity: 0.09;
+  }
+
+  40% {
+    transform: translateX(3%);
+  }
+
+  50% {
+    transform: translateX(-3%);
+    opacity: 0.05;
+  }
+
+  60% {
+    transform: translateX(8%);
+  }
+
+  70% {
+    transform: translateX(-3%);
+  }
+
+  80% {
+    transform: translateX(10%);
+    opacity: 0.02;
+  }
+
+  90% {
+    transform: translateX(-2%);
+  }
 }
 
-/* Text Background (black zone) */
-.clip-text:after {
-    position: absolute;
-    z-index: -1;
-    top: .125em;
-    right: .125em;
-    bottom: .125em;
-    left: .125em;
-    background-color: #000;
+// Long Scratches
+@keyframes inner-scratch {
+  0% {
+    transform: translateX(0);
+    opacity: 0.08;
+  }
+
+  10% {
+    transform: translateX(-1%);
+  }
+
+  20% {
+    transform: translateX(1%);
+  }
+
+  30% {
+    transform: translateX(-2%);
+  }
+
+  40% {
+    transform: translateX(3%);
+  }
+
+  50% {
+    transform: translateX(-3%);
+    opacity: 0.06;
+  }
+
+  60% {
+    transform: translateX(8%);
+  }
+
+  70% {
+    transform: translateX(-3%);
+  }
+
+  80% {
+    transform: translateX(10%);
+    opacity: 0.03;
+  }
+
+  90% {
+    transform: translateX(20%);
+  }
+
+  100% {
+    transform: translateX(30%);
+  }
 }
 
-/* Change the background position to display letter when the black zone isn't here */
-.clip-text--no-textzone:before {
-    background-position: -.65em 0;
+
+/* Simple Title Animation */
+@keyframes draw {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 110%;
+  }
 }
 
-.clip-text--no-textzone:after {
-    content: none;
+
+@keyframes draw-bottom {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+  }
 }
 
-/* Use Background-size cover for photo background and no-repeat background */
-.clip-text--cover,
-.clip-text--cover:before {
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-            background-size: cover;
-}
 
-/* Background image from http://thepatternlibrary.com/ and http://lorempixel.com */
-.clip-text_one {
-    background-image: url(http://lorempixel.com/480/200/abstract/7);
-}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
 
-.clip-text_two {
-    background-image: url(http://lorempixel.com/480/200/abstract);
-}
-
-.clip-text_tree {
-    background-image: url(http://lorempixel.com/480/200/abstract/2);
-}
-
-.clip-text_four {
-    background-image: url(http://lorempixel.com/480/200/abstract/4);
-}
-
-.clip-text_five {
-    background-image: url(http://lorempixel.com/480/200/abstract/5);
-}
-
-.clip-text_six {
-    background-image: url(http://lorempixel.com/480/200/abstract/9);
-}
-
-.clip-text_seven {
-    background-image: url(http://lorempixel.com/480/200/abstract/8);
-}
-
-.clip-text_eight {
-    background-image: url(http://lorempixel.com/410/200/people);
-}
-
-.clip-text_nine {
-    background-image: url(http://lorempixel.com/480/200/nightlife);
-}
-
-.clip-text_ten {
-    background-image: url(http://lorempixel.com/480/200/nightlife/8);
-}
-
-.clip-text_eleven {
-    background-image: url(http://lorempixel.com/480/200/fashion/10/cc);
-    background-size: cover;
-}
-
-.clip-text_twelve {
-    background-image: url(http://lorempixel.com/480/200/people/7/cc);
-}
-
-.clip-text_thirteen {
-    background-image: url(http://lorempixel.com/480/200/food/5/cc);
-}
-
-.clip-text_fourteen {
-    background-image: url(http://lorempixel.com/480/200/city/9/cc);
-}
-
-.clip-text_fifteen {
-    background-image: url(http://lorempixel.com/480/200/nightlife/5);
+  100% {
+    opacity: 1;
+  }
 }
