--- a/views/index.erb
+++ b/views/index.erb
@@ -78,8 +78,8 @@
         </div>
         Navbar de monitores grandes-->
 
-        <h1>
-            <span>CSS Cinema Effect</span>
+        <h1 class="margin-top:100px">
+            <span>Buena Cosecha</span>
         </h1>
         <div class='outer-scratch'>
             <div class="inner-scratch">
