--- a/views/index.erb
+++ b/views/index.erb
@@ -77,13 +77,14 @@
             </div>
         </div>
         Navbar de monitores grandes-->
-
-        <h1 class="margin-top:100px">
-            <span>Buena Cosecha</span>
-        </h1>
-        <div class='outer-scratch'>
-            <div class="inner-scratch">
-                <div class="background grain"></div>
+        <div class="w3-container" style="margin-top:100px">
+            <h1 class="">
+                <span>Buena Cosecha</span>
+            </h1>
+            <div class='outer-scratch'>
+                <div class="inner-scratch">
+                    <div class="background grain"></div>
+                </div>
             </div>
         </div>
 
