--- a/views/index.erb
+++ b/views/index.erb
@@ -77,9 +77,9 @@
             </div>
         </div>
         Navbar de monitores grandes-->
-        <div class="w3-container" style="margin-top:100px">
-            <h1 class="">
-                <span>Buena Cosecha</span>
+        <div class="w3-container">
+            <h1>
+                Buena Cosecha
             </h1>
             <div class='outer-scratch'>
                 <div class="inner-scratch">
