--- a/views/index.erb
+++ b/views/index.erb
@@ -76,15 +76,17 @@
                 </div>
             </div>
         </div>
-        Navbar de monitores grandes-->
-            <h1>
-                Buena Cosecha
-            </h1>
-            <div class='outer-scratch'>
-                <div class="inner-scratch">
-                    <div class="background grain"></div>
+        -->
+
+        <div class='outer-scratch'>
+            <div class="inner-scratch">
+                <div class="background grain">
+                    <h1>
+                        Buena Cosecha
+                    </h1>
                 </div>
             </div>
+        </div>
 
         <script src="/js/slide.js"></script>
         <script src="/js/menu.js"></script>
