--- a/views/layout.erb
+++ b/views/layout.erb
@@ -79,6 +79,7 @@
                     <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
             </li>
+            <div id="fb-root"></div>
         </ul>
     </div>
 
