boton de facebook

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,6 +46,14 @@
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
+                    <i id="fb-root" class="">
+                        <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+                    </i>
+                </a>
+            </li>
+
+            <li class="w3-hide-small w3-hide-medium w3-right">
+                <a href="javascript:void(0)">
                     <i id="social-se" class="fa fa-search fa-3x social"></i>
                 </a>
             </li>
@@ -79,8 +87,6 @@
                     <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
             </li>
-            <div id="fb-root"></div>
-            <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
         </ul>
     </div>
 
