agregando fotos fiesta de la flor

--- a/views/fechas/fiestadelaflor.erb
+++ b/views/fechas/fiestadelaflor.erb
@@ -28,9 +28,9 @@
 
                     <div class="w3-modal-content">
                         <div class="w3-content" style="max-width:1200px">
-                          <img class="mySlides" src="/imagenes/galeria/fechas/flor21-10/banda1.jpg" style="width:100%">
-                          <img class="mySlides" src="/imagenes/galeria/fechas/flor21-10/banda2.jpg" style="width:100%">
-                          <img class="mySlides" src="/imagenes/galeria/fechas/flor21-10/banda3.jpg" style="width:100%">
+                            <img class="mySlides" src="/imagenes/galeria/fechas/flor21-10/banda1.jpg" style="width:100%">
+                            <img class="mySlides" src="/imagenes/galeria/fechas/flor21-10/banda2.jpg" style="width:100%">
+                            <img class="mySlides" src="/imagenes/galeria/fechas/flor21-10/banda3.jpg" style="width:100%">
 
                             <div class="w3-row w3-black w3-center">
                                 <div class="w3-container w3-display-container">
@@ -53,7 +53,9 @@
                     </div>
                 </div>
             </div>
-            <script src="/js/imagegalery.js"></script>
+        </div>
 
-        </body>
-    </html>
+        <script src="/js/imagegalery.js"></script>
+
+    </body>
+</html>
