cambiando fuentes del menu

--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2056,21 +2056,21 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .menuhomerojo {
     font-size: 40px;
-    font-family: 'Monofett', cursive;
+    font-family: 'Codystar', cursive;
 
     color: #A32535;
 }
 
 .menuhomeamarillo {
     font-size: 40px;
-    font-family: 'Monofett', cursive;
+    font-family: 'Codystar', cursive;
 
     color: #E6D672;
 }
 
 .menuhomeverde {
     font-size: 40px;
-    font-family: 'Monofett', cursive;
+    font-family: 'Codystar', cursive;
     color: #43962D;
 }
 
