agregando fecha monociclo

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -13,12 +13,20 @@
         <br>
         <br>
             <div class="w3-container textocategorias">
-                <a href="https://www.facebook.com/WhiteVinylBar/" target="_blank" class="quitar">
+                <a href="https://www.facebook.com/events/1842814522622071//" target="_blank" class="quitar">
                     <span class="textocategorias2">Sabado 26 de Noviembre</span>
                     en White Vinyl (H. Yrigoyen 13233 Adrogue), 22 hs, $70 anticipadas $100 en puerta
                     <i class="material-icons">priority_high</i>
                 </a>
             </div>
+            <div class="w3-container textocategorias">
+                <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
+                    <span class="textocategorias2">Jueves 8 de Diciembre</span>
+                    en Monociclo Club de Arte (H. Yrigoyen 6944 Banfield), 22 hs, $50 anticipadas
+                    <i class="material-icons">priority_high</i>
+                </a>
+            </div>
+
         </div>
         <br>
     </body>
