nuevas fechas actualizacion

--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,6 +13,15 @@
         <br>
 
         <div class="w3-container w3-hoverable">
+            <a href="pasados" class="quitar">
+                <span class="textodescripcion">White Vinyl 2 | 23 hs | CABA|</span>
+                <span class="texttercernivel">26 de Noviembre de 2016</span>
+                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:75px">
+            </a>
+        </div>
+        <br>
+
+        <div class="w3-container w3-hoverable">
             <a href="fiestadelaflor" class="quitar">
                 <span class="textodescripcion">Fiesta de la Flor | 21 hs | CABA|</span>
                 <span class="texttercernivel">21 de Octubre de 2016</span>
