--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -13,9 +13,9 @@
         <br>
         <br>
             <div class="w3-container textocategorias">
-                <a href="https://www.facebook.com/events/1842814522622071//" target="_blank" class="quitar">
-                    <span class="textocategorias2">Sabado 26 de Noviembre</span>
-                    en White Vinyl (H. Yrigoyen 13233 Adrogue), 22 hs, $70 anticipadas $100 en puerta
+                <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
+                    <span class="textocategorias2">Sabado 3 de Diciembre</span>
+                    en White Vinyl (H. Yrigoyen 1799 Avellaneda), 22 hs, $100 anticipadas
                     <i class="material-icons">priority_high</i>
                 </a>
             </div>
