--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -12,22 +12,12 @@
         <br>
         <br>
         <br>
-            <div class="w3-container textocategorias">
-                <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
-                    <span class="textocategorias2">Sabado 3 de Diciembre</span>
-                    en White Vinyl (H. Yrigoyen 1799 Avellaneda), 22 hs, $100 anticipadas
-                    <i class="material-icons">priority_high</i>
-                </a>
-            </div>
-            <br>
-            <div class="w3-container textocategorias">
-                <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar">
-                    <span class="textocategorias2">Jueves 8 de Diciembre</span>
-                    en Monociclo Club de Arte (H. Yrigoyen 6944 Banfield), 22 hs, $50 anticipadas
-                    <i class="material-icons">priority_high</i>
-                </a>
-            </div>
-
+        <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
+                <span class="textocategorias2">Martes 14 de Febrero</span>
+                en Makena Cantina Club (Fitz Roy 1519 CABA), 21 hs, $30
+                <i class="material-icons">priority_high</i>
+            </a>
         </div>
         <br>
     </body>
