--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="google-site-verification" content="cUWX8JFI31vB6M5HPZGZmoYoIAUT8TOvdMAVTTqbVGs"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
