--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -46,6 +46,42 @@
         </pre>
         </div>
         <br>
+        <div class="w3-container">
+            <div class="textocategorias">
+                Buena Cosecha
+            </div>
+
+            <pre class="texttercernivel">
+    Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
+    No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
+    A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
+    Crecí en ella y por más que duela, hay que reconocer que yo aprendí de ella.
+    Así es la vida, es corta y rica. Mejor metele onda que quizás no se repita.
+
+    Me voy contaminando, me voy intoxicando. Y cortos o largos voy mis pasos dando.
+    Camino lento y estoy sonriendo. Por que mi destino yo estoy descubriendo.
+    Hoy no oculto mis miedos, no planto en el silencio. Te estoy transmitiendo que esto sí va en serio.
+    Ya sé que cuesta. Intentá y creá. Y a todas mis preguntas encontraré una respuesta.
+
+    Salgo a caminar, para no pensar...
+    Dejarme llevar…
+    Y empiezo a cantar…..
+    La la la.
+
+    Ya se está terminando, esto que estoy rapeando. Y aunque bueno o malo el mensaje es claro.
+    Ponele el pecho, y andá por eso. Eso que te empuja a cumplir tus deseos.
+    Hay voluntad de sobra. NO planto en la memoria. Que no se repita lo que te demora.
+    Sangre en mis venas. Meta entre cejas. Prestá atención ahora que suena Buena Cosecha !!
+
+    Por más….
+    Voy por más….
+    Por más……
+    Voy por más….
+    La la la la.
+        </pre>
+        </div>
+        <br>
+
 
 
         <div class="w3-container">
@@ -87,6 +123,21 @@
         </pre>
         </div>
         <br>
+
+        <div class="w3-container">
+            <div class="textocategorias">
+                Sweet
+            </div>
+
+            <pre class="texttercernivel">
+              Buena Cosecha si señor,
+              de corazón,
+              buena cosecha.
+
+        </pre>
+        </div>
+        <br>
+
 
         <div class="w3-container">
             <div class="textocategorias">
