--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -36,7 +36,7 @@
             <a href="https://www.facebook.com/events/1842814522622071/" class="quitar">
                 <span class="textodescripcion">White Vinyl | 23 hs | Avellaneda|</span>
                 <span class="texttercernivel">3 de Diciembre de 2016</span>
-                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px">
+                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px"> Cancelado
             </a>
         </div>
 
@@ -111,7 +111,7 @@
         </div>
 
         <br>
-        
+
         <div class="w3-container w3-hoverable">
             <a href="locabohemia" class="quitar">
                 <span class="textodescripcion">Loca Bohemia | 01 hs CABA|</span>
