--- a/views/layout.erb
+++ b/views/layout.erb
@@ -138,7 +138,7 @@
         <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
             <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
         </a>
-        <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+        <a href="mailto:contacto@buenacosecha.musica.ar?subject=contacto" target="_blank">
             <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
         </a>
         <p class="w3-medium">Desarrollado por y para Buena Cosecha - 2017
