--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<o></o><!DOCTYPE html>
 <html>
     <title>Buena Cosecha | Ska Reggae
     </title>
@@ -12,7 +12,15 @@
     </head>
 
     <body>
+        <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
+            <div class="mySlides  w3-display-container">
+                <img class="animated rotateIn infinite" src="/imagenes/logos/bclogo.png">
+            </div>
 
+            <!--
+
+      URL del artículo: http://www.ejemplode.com/17-html/94-ejemplo_de_comentario_en_html.html
+      Leer completo: ejemplos de Comentario en HTML
         <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
           <div class="mySlides  w3-display-container">
               <img src="/imagenes/flyers/makena.jpg" class="w3-animate-bottom" style="width:100%">
@@ -75,12 +83,13 @@
                     Buena Cosecha !
                 </div>
             </div>
-        </div>
-    </body>
+        </div> -->
 
-    <script src="/js/slide.js"></script>
-    <script src="/js/menu.js"></script>
-    <script src="/js/clicks.js"></script>
-    <script src="/js/jquery.js"></script>
-</body>
+        </body>
+
+        <script src="/js/slide.js"></script>
+        <script src="/js/menu.js"></script>
+        <script src="/js/clicks.js"></script>
+        <script src="/js/jquery.js"></script>
+    </body>
 </html>
